# 202200129_LAB_SO1_2S2025_PROYECTO3_ULTIMO

./: CLOUD_SHELL_QUICK.md  GUIA_CLOUD_SHELL.md  README.md  SETUP_VM_ZOT.md
proyecto3/: .gitignore  CLOUDSHELL_COMMANDS.md  COMANDOS_LOCUST_KUBERNETES.md  ENLACES_ACCESO_LOCAL.md  ESTRUCTURA_PROYECTO.md  IMPORT_GRAFANA_DASHBOARD.md  QUICK_START.md  README.md  deploy-quick.sh  docker-compose.yml  grafana-dashboard-final.json  grafana-dashboard.json  push-to-zot.sh  run_locust_with_valkey.sh  test_load.py
proyecto3/Documentacion/: DOCUMENTACION_TECNICA.md
proyecto3/docker/: Dockerfile.go  Dockerfile.go.distroless  Dockerfile.locust  Dockerfile.rust  Dockerfile.rust.distroless
proyecto3/docs/: README.md  ZOT_REGISTRY_SETUP.md
proyecto3/go-deployment-1/: Dockerfile  go.mod  main.go
proyecto3/go-processor/: go.mod  main.go
proyecto3/k8s/: base-deployment.yaml  kafka.yaml  rabbitmq.yaml  valkey-grafana.yaml
proyecto3/kubernetes/: 00-namespaces.yaml  01-rust-api-deployment.yaml  02-go-deployment-1.yaml  03-ingress.yaml  04-go-deployment-1-loadbalancer.yaml  05-grafana-loadbalancer.yaml  06-zot-registry.yaml  07-grafana-redis-deployment.yaml  08-locust-deployment.yaml
proyecto3/locust/: locustfile.py  requirements.txt
proyecto3/proto/: weather_tweet.proto
proyecto3/rust-api/: Cargo.toml  Dockerfile
proyecto3/rust-api/src/: main.rs
proyecto3/scripts/: build-and-deploy.sh  build-and-push.sh  build-images.sh  deploy-all.sh  deploy.sh  (+10 more)
proyecto3/src/rust/: Cargo.toml
proyecto3/src/rust/src/: main.rs
proyecto3_md/: Proyecto3-SOPES1-kubernetes-Enunciado.md
(+22 files in other folders)
