[package]
name = "weather-api"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "weather-api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.11"
futures = "0.3"

[profile.release]
opt-level = 3
