[package]
name = "weather-api"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "weather-api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
