[package]
name = "weather-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weather-api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"
